# Mooncake

./: CMakeLists.txt
doc/zh/: mooncake-store.md
mooncake-store/: CMakeLists.txt
mooncake-store/include/: allocation_strategy.h  buffer_allocator.h  config.h  distributed_object_store.h  distributed_object_store_helper.h  dummy_transfer_agent.h  random_allocation_strategy.h  rdma_transfer_agent.h  replica_allocator.h  store_config.h  transfer_agent.h  types.h
mooncake-store/include/cachelib_memory_allocator/: AllocationClass.h  MemoryAllocator.h  Slab.h
mooncake-store/include/store/: controller.h  node_types.h
mooncake-store/src/: CMakeLists.txt  buffer_allocator.cpp  config.cpp  controller.cpp  distributed_object_store.cpp  distributed_object_store_helper.cpp  dummy_transfer_agent.cpp  random_allocation_strategy.cpp  rdma_transfer_agent.cpp  replica_allocator.cpp  types.cpp
mooncake-store/src/cachelib_memory_allocator/: MemoryAllocator.cpp
mooncake-store/tests/: CMakeLists.txt  buffer_allocator_test.cpp  multi_object_store_test.cpp  object_store_test.cpp  object_store_test2.cpp  rdma_object_store_test.cpp  replica_allocator_test.cpp  replica_allocator_test2.cpp
